# opencv_for_pose_estimation

./: CMakeLists.txt
camera_calibration/: calibrate.py
camera_calibration/.ipynb_checkpoints/: calibrate_notebook-checkpoint.ipynb
src/: aruco_detect.cpp  aruco_samples_utility.hpp  calib_charuco.cpp  camera_calib.cpp  photo_shoot.cpp
